improved Archive in small viewports (series headers no longer sticky, return-to-top links centrally aligned; larger margin after return-links

--- a/main.css
+++ b/main.css
@@ -926,20 +926,19 @@ textarea {
 	list-style-type: "";
 	& .series {
 		display: grid;
+		border-block-end: var(--fore-line);
 	}
 	& header {
-		position: sticky;
-		inset-block-start: 0;
-		z-index: 3;
 		margin-block-end: calc(-1 * var(--line-width));
-		background-color: var(--back-colour);
 		border-block-end: var(--fore-line);
 	}
 	& .return-links {
 		display: flex;
 		flex-direction: row;
 		justify-content: space-between;
-		margin-block: 1lh;
+		margin-block-start: 1lh;
+		margin-block-end: 3lh;
+		text-align: center;
 	}
 	& > :last-child > .return-links {
 		margin-block-end: 0;
@@ -1233,9 +1232,11 @@ textarea {
 	#series-list {
 		& .series {
 			grid-template-columns: 260px auto;
-			border-block-end: var(--fore-line);
 		}
 		& header {
+			position: sticky;
+			inset-block-start: 0;
+			z-index: 3;
 			align-self: start;
 			margin-inline-end: calc(-1 * var(--line-width));
 			background-color: unset;
